# raglearn

./: main.py  pyproject.toml  requirement.txt
notebook/: document.ipynb
notebook/data/text_files/: my_file.txt
notebook/data/vector_store/: chroma.sqlite3
